fix: openapi tags
